--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "size-limit": "^5.0.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "standard-version": "^9.3.2"
   }
 }
