--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: auto-release
 
 on:
   push:
-    branches: [main]
+    branches: [master]
 
 jobs:
 
@@ -21,3 +21,4 @@ jobs:
       - run: npm publish
         env:
           NPM_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+
