--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
       - run: npx standard-version
       - run: npm i -g tsdx
       - run: git push origin master
-      - run: npm publish
+      - run: npm publish --access public
         env:
           NPM_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
 
